--- a/01-Liminaire.Rmd
+++ b/01-Liminaire.Rmd
@@ -13,3 +13,5 @@
 Écrivez ici le résumé de votre mémoire en anglais (et changer le titre du paragraphe).
 
 *Keywords: Écrivez ici les mots clés en anglais (cinq mots au plus).*
+
+bla
